v2015/SRC/platform/Android/Dibuixos/Dibuixos.NativeActivity/x86/Debug/Dibuixos.NativeActivity.log
  ANDROID_HOME=C:\Program Files (x86)\Android\android-sdk
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio 14.0\Apps\apache-ant-1.9.3\
  JAVA_HOME=C:\Program Files (x86)\Java\jdk1.7.0_55
  NDK_ROOT=C:\ProgramData\Microsoft\AndroidNDK\android-ndk-r10e\
  pch.h
  android_native_app_glue.c
  main.cpp
main.cpp(38,31): error : unknown class name 'RenderUpdate'; did you mean 'RenderUpdate1'?
          class RenderUpdate1 : public RenderUpdate
                                       ^~~~~~~~~~~~
                                       RenderUpdate1
  main.cpp(38,8) :  note: 'RenderUpdate1' declared here
          class RenderUpdate1 : public RenderUpdate
                ^
main.cpp(38,31): error : base class has incomplete type
          class RenderUpdate1 : public RenderUpdate
                                ~~~~~~~^~~~~~~~~~~~
  main.cpp(38,8) :  note: definition of 'Demo::RenderUpdate1' is not complete until the closing '}'
          class RenderUpdate1 : public RenderUpdate
                ^
main.cpp(43,9): error : use of non-static data member 'varA' of 'Demo' from nested type 'RenderUpdate1'
                          LOGI(varA);
                               ^~~~
  main.cpp(18,98) :  note: expanded from macro 'LOGI'
  #define LOGI(...) ((void)__android_log_print(ANDROID_LOG_INFO, "AndroidProject1.NativeActivity", __VA_ARGS__))
                                                                                                   ^
main.cpp(47,4): error : use of non-static data member 'varA' of 'Demo' from nested type 'RenderUpdate1'
                          varA++;
                          ^~~~
main.cpp(36,6): warning : private field 'varA' is not used [-Wunused-private-field]
          int varA;
              ^
  1 warning and 4 errors generated.
